--- a/categorias.html
+++ b/categorias.html
@@ -56,55 +56,55 @@
             <article class="categoria-cuadricula">
                 <a href="./camisetas.html">
                     <img src="./img/camiseta-suplente.jpg" alt="categoria">
-                    <p class="categoria-centrado">Camisetas </p>
+                    <p class="categoria-centrado">Titular</p>
                 </a>
             </article>
             <article class="categoria-cuadricula">
                 <a href="./camisetas.html">
-                    <img src="./img/camiseta-suplente.jpg" alt="categoria">
+                    <img src="./img/camiseta-titular.jpg" alt="categoria">
+                    <span class="categoria-centrado">Suplente</span>
+                </a>
+            </article>
+            <article class="categoria-cuadricula">
+                <a href="./camisetas.html">
+                    <img src="./img/camperas.png" alt="categoria">
+                    <span class="categoria-centrado">Camperas</span>
+                </a>
+            </article>
+            <article class="categoria-cuadricula">
+                <a href="./camisetas.html">
+                    <img src="./img/categorias-camisetas.jpg" alt="categoria">
+                    <span class="categoria-centrado">Arquero</span>
+                </a>
+            </article>
+            <article class="categoria-cuadricula">
+                <a href="./camisetas.html">
+                    <img src="./img/equipo.jpg" alt="categoria">
+                    <span class="categoria-centrado">Pantalones</span>
+                </a>
+            </article>
+            <article class="categoria-cuadricula">
+                <a href="./camisetas.html">
+                    <img src="./img/messi.jpg" alt="categoria">
                     <span class="categoria-centrado">Camisetas</span>
                 </a>
             </article>
             <article class="categoria-cuadricula">
                 <a href="./camisetas.html">
-                    <img src="./img/camiseta-suplente.jpg" alt="categoria">
-                    <span class="categoria-centrado">Camisetas</span>
+                    <img src="./img/remera-violeta.jpg" alt="categoria">
+                    <span class="categoria-centrado">Remeras</span>
                 </a>
             </article>
             <article class="categoria-cuadricula">
                 <a href="./camisetas.html">
-                    <img src="./img/camiseta-suplente.jpg" alt="categoria">
-                    <span class="categoria-centrado">Camisetas</span>
+                    <img src="./img/remera.jpg" alt="categoria">
+                    <span class="categoria-centrado">Remeras</span>
                 </a>
             </article>
             <article class="categoria-cuadricula">
                 <a href="./camisetas.html">
-                    <img src="./img/camiseta-suplente.jpg" alt="categoria">
-                    <span class="categoria-centrado">Camisetas</span>
-                </a>
-            </article>
-            <article class="categoria-cuadricula">
-                <a href="./camisetas.html">
-                    <img src="./img/camiseta-suplente.jpg" alt="categoria">
-                    <span class="categoria-centrado">Camisetas</span>
-                </a>
-            </article>
-            <article class="categoria-cuadricula">
-                <a href="./camisetas.html">
-                    <img src="./img/camiseta-suplente.jpg" alt="categoria">
-                    <span class="categoria-centrado">Camisetas</span>
-                </a>
-            </article>
-            <article class="categoria-cuadricula">
-                <a href="./camisetas.html">
-                    <img src="./img/camiseta-suplente.jpg" alt="categoria">
-                    <span class="categoria-centrado">Camisetas</span>
-                </a>
-            </article>
-            <article class="categoria-cuadricula">
-                <a href="./camisetas.html">
-                    <img src="./img/camiseta-suplente.jpg" alt="categoria">
-                    <span class="categoria-centrado">Camisetas</span>
+                    <img src="./img/gorras.jpg" alt="categoria">
+                    <span class="categoria-centrado">Gorras</span>
                 </a>
             </article>
         </section>
