--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                 <article class="buscador">
                     <form action="#">
-                    <input id= "buscador" class="buscador-input" type="text" placeholder="Buscar productos">
+                    <input id= "buscador" class="buscador-input" type="search" placeholder="Buscar productos">
                     </form>
                 </article>
 
@@ -93,19 +93,19 @@
             <h2>Categorias</h2>
             <section>
             <article class="categorias">
-                <a class = "imagenCategoria" href="categorias.html">
+                <a class = "imagenCategoria" href="camisetas.html">
                     <img  src="./img/categorias-camisetas.jpg" alt="">
                     <p>Camisetas</p>
                 </a>
-                <a class = "imagenCategoria" href="categorias.html">
+                <a class = "imagenCategoria" href="camisetas.html">
                     <img  src="./img/camiseta-titular.jpg" alt="">
                     <p>Pantalones</p>
                 </a>
-                <a class = "imagenCategoria" href="categorias.html">
+                <a class = "imagenCategoria" href="camisetas.html">
                     <img  src="./img/camperas.png" alt="">
                     <p>Camperas</p>
                 </a>
-                <a class = "imagenCategoria" href="categorias.html">
+                <a class = "imagenCategoria" href="camisetas.html">
                     <img  src="./img/gorras.jpg" alt="">
                     <p>Gorras</p>
                 </a>
