agrego: - volver al login en boton: cancelar y guardar - cursor pointer a esos botones + el de login

--- a/registrate.html
+++ b/registrate.html
@@ -36,7 +36,7 @@
         <input class="inputs_register" type="password" name="contrasenia" id="" placeholder="Repita la contraseña">
 
         <!-- Boton Cancelar -->
-        <div class="contenedor_botonCancelar"><input class="enviar_boton" type="reset" name="enviar" id="" value="Cancelar"></div>
+        <div class="contenedor_botonCancelar"><input class="enviar_boton" type="submit" name="enviar" id="" value="Cancelar"></div>
         <!-- Boton Guardar -->
         <div class="contenedor_botonGuardar"><input class="enviar_boton" type="submit" name="enviar" id="" value="Guardar"></div>
 
