--- a/micuenta.html
+++ b/micuenta.html
@@ -8,6 +8,7 @@
     <link rel="Shortcut Icon" type="image/png" href="./img/new_logo_sacachispasfc.png">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/stylespopup.css">
+    <link rel="stylesheet" href="./css/media_query.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
@@ -49,7 +50,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="main_micuenta">
 
             <section class="contenedor_nombreYApellido">
                 <div class="contenedor_perfilAnonimo"><img src="./img/perfil_anonimo.jpg" alt="" class="perfilAnonimo"></div>
