--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="Shortcut Icon" type="image/png" href="./img/new_logo_sacachispasfc.png">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="/css/login-pop-up.css">
+    <link rel="stylesheet" href="./css/media_query.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <script src="https://kit.fontawesome.com/429b37cace.js" crossorigin="anonymous"></script>
@@ -47,11 +48,11 @@
     </header>
 
     <main>
-        <div class="bannerInicio">
-            <img src="./img/bannerEscudo.png" alt="">
+        <div class="contenedor_bannerInicio">
+            <img class="bannerInicio" src="./img/bannerEscudo.png" alt="">
         </div>
 
-        <section >
+        <section>
             <h1>¡Bienvenidos a Tienda Sacachispas Fútbol!</h1>
             <section class="productos">
             <article class="item">
