--- a/producto.html
+++ b/producto.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Shortcut Icon" type="image/png" href="./img/new_logo_sacachispasfc.png">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/media_query.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
@@ -48,8 +49,7 @@
         </div>
     </header>
 
-    <main>
-
+    <main class="detalle_main">
         <section class="detalle-producto">
             <article class="detalle-producto-item">
                 <img src="./img/remera-violeta.jpg" alt="">
