agrego slider index a banner y metodos de pago, nuevas imagenes de metodos de pago e implementacion de buscador en categorias

--- a/categorias.html
+++ b/categorias.html
@@ -142,6 +142,8 @@
         </article>
         </section>
     </footer>
+    <!-- JavaScript -->
+    <script src="./js/buscador.js"></script>
 </body>
 
 </html>
