--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <script src="https://kit.fontawesome.com/429b37cace.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/cb8f01f13e.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./slick/slick.css">
+    <link rel="stylesheet" href="./slick/slick-theme.css">
     <title>Tienda Sacachispas Fútbol</title>
 </head>
 <body>
@@ -50,6 +52,9 @@
     <main>
         <div class="contenedor_bannerInicio">
             <img class="bannerInicio" src="./img/bannerEscudo.png" alt="">
+            <img class="bannerInicio" src="./img/bannerEscudo2.png" alt="">
+            <img class="bannerInicio" src="./img/bannerEscudo3.png" alt="">
+            <img class="bannerInicio" src="./img/bannerEscudo4.png" alt="">
         </div>
 
         <section>
@@ -114,16 +119,16 @@
             </section>
         </section>
 
-        <section>
+        <section class="formasPagoContenedor">
             <h2>Formas de Pago</h2>
-            <section >
             <article class="formasPago">
-                <a href=""><img src="./img/visa_pago_final.png" alt=""></a>
-                <a href=""><img src="./img/mastercard.png" alt=""></a>
-                <a href=""><img src="./img/maestro.png" alt=""></a>
-                <a href=""><img src="./img/cabal.png" alt=""></a>
+                <a href=""><img src="./img/formasPago/visa.png" alt=""></a>
+                <a href=""><img src="./img/formasPago/cabal.png" alt=""></a>
+                <a href=""><img src="./img/formasPago/maestro.png" alt=""></a>
+                <a href=""><img src="./img/formasPago/mastercard.png" alt=""></a>
+                <a href=""><img src="./img/formasPago/mercadopago.png" alt=""></a>
+                <a href=""><img src="./img/formasPago/rapipago.png" alt=""></a>
             </article>
-        </section>
         </section>
 
     </main>
@@ -155,5 +160,12 @@
         </article>
         </section>
     </footer>
+
+    <!-- JavaScript -->
+    <!-- Slick -->
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="./slick/slick.min.js"></script>
+    <script src="./js/slick.js"></script>
+
 </body>
 </html>
