pruebas slider producto (se ve feo)

--- a/producto.html
+++ b/producto.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <script src="https://kit.fontawesome.com/429b37cace.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/cb8f01f13e.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./slick/slick.css">
+    <link rel="stylesheet" href="./slick/slick-theme.css">
     <title>Producto - Tienda Sacachispas Fútbol</title>
 </head>
 
@@ -80,23 +82,31 @@
                 <article class="item">
                 <a href="./producto.html">
                         <img class="imagenProducto" src="./img/remera-violeta.jpg" alt="">
-                    <h3 class="tituloProducto">Camiseta</h3><span class="precio">$20.000</span>
+                    <h3 class="tituloProducto">Remera Violeta</h3><span class="precio">$30.000</span>
                 </a>    
                 </article>
 
                 <article class="item">
                     <a href="./producto.html">
-                        <img class="imagenProducto" src="./img/remera-violeta.jpg" alt="">
-                    <h3 class="tituloProducto">Camiseta</h3><span class="precio">$20.000</span>
+                            <img class="imagenProducto" src="./img/remera.jpg" alt="">
+                        <h3 class="tituloProducto">Remera Blanca</h3><span class="precio">$27.000</span>
+                    </a>    
+                    </article>
+
+                <article class="item">
+                    <a href="./producto.html">
+                        <img class="imagenProducto" src="./img/gorras.jpg" alt="">
+                    <h3 class="tituloProducto">Gorra</h3><span class="precio">$15.000</span>
                 </a> 
                 </article>
 
                 <article class="item">
-                    <a href="./producto.html">
+                <a href="./producto.html">
                         <img class="imagenProducto" src="./img/remera-violeta.jpg" alt="">
-                    <h3 class="tituloProducto">Camiseta</h3><span class="precio">$20.000</span>
-                </a> 
+                    <h3 class="tituloProducto">Remera Violeta</h3><span class="precio">$30.000</span>
+                </a>    
                 </article>
+
             </section>
 
     </main>
@@ -128,6 +138,9 @@
         </article>
         </section>
     </footer>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="./slick/slick.min.js"></script>
+    <script src="./js/slick.js"></script>
 </body>
 
 </html>
