--- a/registrate.html
+++ b/registrate.html
@@ -44,7 +44,7 @@
         <p class="sinCuenta"><a class="registrate" href="index.html">Volver al inicio</a></p>
         </form>
 
-        <div id="mensaje" class="mensaje-error">
+        <div id="mensaje">
 
         </div>
     </div>
