--- a/camisetas.html
+++ b/camisetas.html
@@ -52,142 +52,7 @@
     <main>
 
         <h1> CAMISETAS </h1>
-        <section class="cuadriculaCamisetas">
-            
-            <!-- Item 1 -->
-                <section class="productosCamisetas">
-                        <article class="itemCamisetas">
-                            <a class="imagenProductoCamisetas" href="producto.html"><img class="imagenProductoCamisetas" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt=""></a>
-                                <h3 class="tituloProductoCamisetas">Camiseta Titular 2022</h3><span class="precioCamisetas">$20.000</span>
-                            <div class="formularioParaSlider">
-                                <form action="">
-                                <input class="input-cantidadCamisetas" type="number" name="cantidad" value="1" min="1" max="10" step="">
-                                </form>
-                                <button class="boton-agregarCamisetas">Agregar&nbsp;<span><i class="fa-solid fa-cart-plus"></i></span></button>
-                            </div>
-                        </article>
-                </section>
-            <!-- Fin Item 1 -->
-
-            <!-- Item 2 -->
-            <section class="productosCamisetas">
-                <article class="itemCamisetas">
-                    <a class="imagenProductoCamisetas" href="producto.html"><img class="imagenProductoCamisetas" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt=""></a>
-                        <h3 class="tituloProductoCamisetas">Camiseta Titular 2022</h3><span class="precioCamisetas">$20.000</span>
-                    <div class="formularioParaSlider">
-                        <form action="">
-                        <input class="input-cantidadCamisetas" type="number" name="cantidad" value="1" min="1" max="10" step="">
-                        </form>
-                        <button class="boton-agregarCamisetas">Agregar&nbsp;<span><i class="fa-solid fa-cart-plus"></i></span></button>
-                    </div>
-                </article>
-            </section>
-            <!-- Fin Item 2 -->
-        
-            <!-- Item 3 -->
-            <section class="productosCamisetas">
-                <article class="itemCamisetas">
-                    <a class="imagenProductoCamisetas" href="producto.html"><img class="imagenProductoCamisetas" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt=""></a>
-                        <h3 class="tituloProductoCamisetas">Camiseta Titular 2022</h3><span class="precioCamisetas">$20.000</span>
-                    <div class="formularioParaSlider">
-                        <form action="">
-                        <input class="input-cantidadCamisetas" type="number" name="cantidad" value="1" min="1" max="10" step="">
-                        </form>
-                        <button class="boton-agregarCamisetas">Agregar&nbsp;<span><i class="fa-solid fa-cart-plus"></i></span></button>
-                    </div>
-                </article>
-            </section>
-            <!-- Fin Item 3 -->
-
-            <!-- Item 4 -->
-            <section class="productosCamisetas">
-                <article class="itemCamisetas">
-                    <a class="imagenProductoCamisetas" href="producto.html"><img class="imagenProductoCamisetas" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt=""></a>
-                        <h3 class="tituloProductoCamisetas">Camiseta Titular 2022</h3><span class="precioCamisetas">$20.000</span>
-                    <div class="formularioParaSlider">
-                        <form action="">
-                        <input class="input-cantidadCamisetas" type="number" name="cantidad" value="1" min="1" max="10" step="">
-                        </form>
-                        <button class="boton-agregarCamisetas">Agregar&nbsp;<span><i class="fa-solid fa-cart-plus"></i></span></button>
-                    </div>
-                </article>
-            </section>
-            <!-- Fin Item 4 -->
-
-            <!-- Item 5 -->
-            <section class="productosCamisetas">
-                <article class="itemCamisetas">
-                    <a class="imagenProductoCamisetas" href="producto.html"><img class="imagenProductoCamisetas" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt=""></a>
-                        <h3 class="tituloProductoCamisetas">Camiseta Titular 2022</h3><span class="precioCamisetas">$20.000</span>
-                    <div class="formularioParaSlider">
-                        <form action="">
-                        <input class="input-cantidadCamisetas" type="number" name="cantidad" value="1" min="1" max="10" step="">
-                        </form>
-                        <button class="boton-agregarCamisetas">Agregar&nbsp;<span><i class="fa-solid fa-cart-plus"></i></span></button>
-                    </div>
-                </article>
-            </section>
-            <!-- Fin Item 5 -->
-
-            <!-- Item 6 -->
-            <section class="productosCamisetas">
-                <article class="itemCamisetas">
-                    <a class="imagenProductoCamisetas" href="producto.html"><img class="imagenProductoCamisetas" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt=""></a>
-                        <h3 class="tituloProductoCamisetas">Camiseta Titular 2022</h3><span class="precioCamisetas">$20.000</span>
-                    <div class="formularioParaSlider">
-                        <form action="">
-                        <input class="input-cantidadCamisetas" type="number" name="cantidad" value="1" min="1" max="10" step="">
-                        </form>
-                        <button class="boton-agregarCamisetas">Agregar&nbsp;<span><i class="fa-solid fa-cart-plus"></i></span></button>
-                    </div>
-                </article>
-            </section>
-            <!-- Fin Item 6 -->
-
-            <!-- Item 7 -->
-            <section class="productosCamisetas">
-                <article class="itemCamisetas">
-                    <a class="imagenProductoCamisetas" href="producto.html"><img class="imagenProductoCamisetas" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt=""></a>
-                        <h3 class="tituloProductoCamisetas">Camiseta Titular 2022</h3><span class="precioCamisetas">$20.000</span>
-                    <div class="formularioParaSlider">
-                        <form action="">
-                        <input class="input-cantidadCamisetas" type="number" name="cantidad" value="1" min="1" max="10" step="">
-                        </form>
-                        <button class="boton-agregarCamisetas">Agregar&nbsp;<span><i class="fa-solid fa-cart-plus"></i></span></button>
-                    </div>
-                </article>
-            </section>
-            <!-- Fin Item 7 -->
-
-            <!-- Item 8 -->
-            <section class="productosCamisetas">
-                <article class="itemCamisetas">
-                    <a class="imagenProductoCamisetas" href="producto.html"><img class="imagenProductoCamisetas" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt=""></a>
-                        <h3 class="tituloProductoCamisetas">Camiseta Titular 2022</h3><span class="precioCamisetas">$20.000</span>
-                    <div class="formularioParaSlider">
-                        <form action="">
-                        <input class="input-cantidadCamisetas" type="number" name="cantidad" value="1" min="1" max="10" step="">
-                        </form>
-                        <button class="boton-agregarCamisetas">Agregar&nbsp;<span><i class="fa-solid fa-cart-plus"></i></span></button>
-                    </div>
-                </article>
-            </section>
-            <!-- Fin Item 8 --> 
-
-            <!-- Item 9 -->
-            <section class="productosCamisetas">
-                <article class="itemCamisetas">
-                    <a class="imagenProductoCamisetas" href="producto.html"><img class="imagenProductoCamisetas" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt=""></a>
-                        <h3 class="tituloProductoCamisetas">Camiseta Titular 2022</h3><span class="precioCamisetas">$20.000</span>
-                    <div class="formularioParaSlider">
-                        <form action="">
-                        <input class="input-cantidadCamisetas" type="number" name="cantidad" value="1" min="1" max="10" step="">
-                        </form>
-                        <button class="boton-agregarCamisetas">Agregar&nbsp;<span><i class="fa-solid fa-cart-plus"></i></span></button>
-                    </div>
-                </article>
-            </section>
-            <!-- Fin Item 9 -->  
+        <section class="cuadriculaCamisetas" id="cuadriculaCamisetas">
 
         </section>
     </main>
@@ -219,6 +84,7 @@
         </article>
         </section>
     </footer>
+    <script src="./js/productos.js"></script>
 </body>
 
 </html>
