--- a/login.html
+++ b/login.html
@@ -32,5 +32,6 @@
         </div>
     </div>
     <script src="/js/loguear.js"></script>
+    <script src="/js/validarRegistro.js"></script>
 </body>
 </html>
