--- a/carrito.html
+++ b/carrito.html
@@ -69,12 +69,12 @@
                                 </tr>
                             </thead>
                             <tbody id="tablaCarrito">
-                                <tr>
+                                <tr id="total">
                                     <td></td>
                                     <td></td>
                                     <td></td>
                                     <td>TOTAL</td>
-                                    <td></td>
+                                    <td id="precioTotal"></td>
                                     <td></td>
                                 </tr>
     
