--- a/carrito.html
+++ b/carrito.html
@@ -32,6 +32,7 @@
                 </article>
 
                 <article class="carritoCompras">
+                    <p class="contadorCarrito"></p>
                     <a href="./carrito.html"><i class="fa-solid fa-cart-shopping botonCarrito"></i></a>
                     <a href="login.html"><i class="fa-regular fa-user botonUsuario"></i></a>
                 </article>
@@ -74,7 +75,7 @@
                                     <td></td>
                                     <td></td>
                                     <td>TOTAL</td>
-                                    <td id="precioTotal"></td>
+                                    <td id="precioFinal"></td>
                                     <td></td>
                                 </tr>
     
@@ -212,6 +213,7 @@
         </section>
     </footer>
     <script src="./js/carrito.js"></script>
+    <script src="./js/contadorCarrito.js"></script>
 </body>
 
 </html>
