--- a/categorias.html
+++ b/categorias.html
@@ -31,6 +31,7 @@
                 </article>
 
                 <article class="carritoCompras">
+                    <p class="contadorCarrito"></p>
                     <a href="./carrito.html"><i class="fa-solid fa-cart-shopping botonCarrito"></i></a>
                     <a href="login.html"><i class="fa-regular fa-user botonUsuario"></i></a>
                 </article>
@@ -144,6 +145,7 @@
     </footer>
     <!-- JavaScript -->
     <script src="./js/buscador.js"></script>
+    <script src="./js/contadorCarrito.js"></script>
 </body>
 
 </html>
