--- a/camisetas.html
+++ b/camisetas.html
@@ -31,6 +31,7 @@
                 </article>
 
                 <article class="carritoCompras">
+                    <p class="contadorCarrito"></p>
                     <a href="./carrito.html"><i class="fa-solid fa-cart-shopping botonCarrito"></i></a>
                     <a href="login.html"><i class="fa-regular fa-user botonUsuario"></i></a>
                 </article>
@@ -85,6 +86,7 @@
         </section>
     </footer>
     <script src="./js/productos.js"></script>
+    <!-- <script src="./js/contadorCarrito.js"></script> -->
 </body>
 
 </html>
