--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Shortcut Icon" type="image/png" href="./img/new_logo_sacachispasfc.png">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="/css/login-pop-up.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/login-pop-up.css">
     <link rel="stylesheet" href="./css/media_query.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
@@ -31,6 +31,7 @@
                 </article>
 
                 <article class="carritoCompras">
+                    <p class="contadorCarrito"></p>
                     <a href="./carrito.html"><i class="fa-solid fa-cart-shopping botonCarrito"></i></a>
                     <a href="login.html"><i class="fa-regular fa-user botonUsuario"></i></a>
                 </article>
@@ -166,6 +167,6 @@
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="./slick/slick.min.js"></script>
     <script src="./js/slick.js"></script>
-
+    <script src="./js/contadorCarrito.js"></script>
 </body>
 </html>
