lo dejo en tus manos

--- a/contacto.html
+++ b/contacto.html
@@ -31,6 +31,7 @@
                 </article>
 
                 <article class="carritoCompras">
+                    <p class="contadorCarrito"></p>
                     <a href="./carrito.html"><i class="fa-solid fa-cart-shopping botonCarrito"></i></a>
                     <a href="login.html"><i class="fa-regular fa-user botonUsuario"></i></a>
                 </article>
@@ -114,6 +115,7 @@
         </article>
         </section>
     </footer>
+    <script src="./js/contadorCarrito.js"></script>
 </body>
 
 </html>
