--- a/index.html
+++ b/index.html
@@ -61,38 +61,6 @@
         <section>
             <h1>¡Bienvenidos a Tienda Sacachispas Fútbol!</h1>
             <section class="productos">
-            <article class="item">
-                <a href="producto.html">
-                    <img class="imagenProducto" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt="">
-                    <h3 class="tituloProducto">Camiseta Titular 2022</h3><span class="precio">$20.000</span>
-                    <span class="fraseAgregarCarrito">Agregar al carrito!</span><i class="fa-solid fa-cart-plus botonSumarCarrito"></i>
-                    <p class="cuotas"><i class="fa-regular fa-credit-card"></i>Hasta 6 cuotas sin interés</p>
-                </a>
-            </article>
-            <article class="item">
-                <a href="producto.html">
-                    <img class="imagenProducto" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt="">
-                    <h3 class="tituloProducto">Camiseta Titular 2022</h3><span class="precio">$20.000</span>
-                    <span class="fraseAgregarCarrito">Agregar al carrito!</span><i class="fa-solid fa-cart-plus botonSumarCarrito"></i>
-                    <p class="cuotas"><i class="fa-regular fa-credit-card"></i>Hasta 6 cuotas sin interés</p>
-                </a>
-            </article>
-            <article class="item">
-                <a href="producto.html">
-                    <img class="imagenProducto" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt="">
-                    <h3 class="tituloProducto">Camiseta Titular 2022</h3><span class="precio">$20.000</span>
-                    <span class="fraseAgregarCarrito">Agregar al carrito!</span><i class="fa-solid fa-cart-plus botonSumarCarrito"></i>
-                    <p class="cuotas"><i class="fa-regular fa-credit-card"></i>Hasta 6 cuotas sin interés</p>
-                </a>
-            </article>
-            <article class="item">
-                <a href="producto.html">
-                    <img class="imagenProducto" src="./img/CAMISETA SACACHISPAS TITULAR VILTER 2022.jpeg" alt="">
-                    <h3 class="tituloProducto">Camiseta Titular 2022</h3><span class="precio">$20.000</span>
-                    <span class="fraseAgregarCarrito">Agregar al carrito!</span><i class="fa-solid fa-cart-plus botonSumarCarrito"></i>
-                    <p class="cuotas"><i class="fa-regular fa-credit-card"></i>Hasta 6 cuotas sin interés</p>
-                </a>
-            </article>
         </section>
         </section>
 
@@ -168,5 +136,6 @@
     <script src="./slick/slick.min.js"></script>
     <script src="./js/slick.js"></script>
     <script src="./js/contadorCarrito.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
