--- a/micuenta.html
+++ b/micuenta.html
@@ -32,6 +32,7 @@
                 </article>
 
                 <article class="carritoCompras">
+                    <p class="contadorCarrito"></p>
                     <a href="./carrito.html"><i class="fa-solid fa-cart-shopping botonCarrito"></i></a>
                     <a href="login.html"><i class="fa-regular fa-user botonUsuario"></i></a>
                 </article>
@@ -237,6 +238,7 @@
         </section>
     </footer>
     <script src="./js/micuenta.js"></script>
+    <script src="./js/contadorCarrito.js"></script>
 </body>
 
 </html>
