mis direcciones funcionando (?

--- a/micuenta.html
+++ b/micuenta.html
@@ -65,7 +65,7 @@
 
             <section class="contenedor_misDirecciones">
                 <div >
-                    <table >
+                    <table id="tablita">
                         <thead>
                             <tr>
                                 <th>Alias</th>
