probando validacion tarjeta

--- a/micuenta.html
+++ b/micuenta.html
@@ -100,6 +100,9 @@
                     </tbody>
                 </table>
             </div>
+            <div id="errores" class="errorTarjeta">
+
+            </div>
         </section>
         </div>
 
@@ -197,7 +200,7 @@
                    
 
                     <div class="boton-pagar-2">
-                        <button onclick="guardarTarjetas()">Guardar</button>
+                        <button type="button" onclick="guardarTarjetas()">Guardar</button>
                     </div>
                 </form>
             </section>
