--- a/login.html
+++ b/login.html
@@ -17,10 +17,10 @@
         <form class="login_form" action="#" method="get">
 
         <div><label class="user_pass" for="usuario">Usuario:</label></div>
-        <input class="inputs_login" type="text" name="usuario" id="usuario" placeholder="Ingrese usuario" onchange="habilitarBoton()">
+        <input class="inputs_login" type="text" name="usuario" id="usuario" placeholder="Ingrese usuario" onkeyup="habilitarBoton()">
 
         <label class="user_pass" for="contrasenia">Contraseña:</label>
-        <input class="inputs_login" type="password" name="contrasenia" id="contrasenia" placeholder="Ingrese contraseña" onchange="habilitarBoton()">
+        <input class="inputs_login" type="password" name="contrasenia" id="contrasenia" placeholder="Ingrese contraseña" onkeyup="habilitarBoton()">
         <a class="olvidaste" href="#">¿Olvidaste la contraseña?</a>
         <div class="contenedor_boton"><input class="enviar_boton" type="submit" name="enviar" id="btnLogin" value="LOGIN" disabled onclick="validarLogin()"></div>
         <p class="sinCuenta">¿No tenés cuenta?&nbsp;<a class="registrate" href="registrate.html">Registrate</a></p>
@@ -31,7 +31,7 @@
 
         </div>
     </div>
-    <script src="/js/loguear.js"></script>
-    <script src="/js/validarRegistro.js"></script>
+    <script src="./js/loguear.js"></script>
+    <!-- <script src="./js/validarRegistro.js"></script> -->
 </body>
 </html>
