--- a/carrito.html
+++ b/carrito.html
@@ -17,7 +17,7 @@
     <title>Carrito - Tienda Sacachispas Fútbol</title>
 </head>
 
-<body>
+<body >
     <header>
         <div class="portada">
             <div class="contenedorEncabezado">
@@ -51,7 +51,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="bodyCarrito">
         <section class="contenedor_tituloCarrito" id="contenedor_tituloCarrito">
             <h1 class="tituloCarrito">Carrito</h1>
             </section>
