--- a/index.html
+++ b/index.html
@@ -136,6 +136,6 @@
     <script src="./slick/slick.min.js"></script>
     <script src="./js/slick.js"></script>
     <script src="./js/index.js"></script>
-    <script src="./js/contadorCarrito.js"></script>
+    <!-- <script src="./js/contadorCarrito.js"></script> -->
 </body>
 </html>
